// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: Admin 1`] = `
<div
  className="layout-page-main-inner"
>
  <withMetricsContext(withAppStateContext(Conditions))
    canEdit={false}
    conditions={Array []}
    onAddCondition={[MockFunction]}
    onRemoveCondition={[MockFunction]}
    onSaveCondition={[MockFunction]}
    qualityGate={
      Object {
        "actions": Object {
          "delegate": true,
        },
        "id": "1",
        "name": "qualitygate",
      }
    }
  />
  <div
    className="display-flex-row huge-spacer-top"
  >
    <div
      className="quality-gate-section width-50 big-padded-right"
      id="quality-gate-projects"
    >
      <header
        className="display-flex-center spacer-bottom"
      >
        <h3>
          quality_gates.projects
        </h3>
        <HelpTooltip
          className="spacer-left"
          overlay={
            <div
              className="big-padded-top big-padded-bottom"
            >
              quality_gates.projects.help
            </div>
          }
        />
      </header>
      <Projects
        key="1"
        qualityGate={
          Object {
            "actions": Object {
              "delegate": true,
            },
            "id": "1",
            "name": "qualitygate",
          }
        }
      />
    </div>
    <div
      className="width-50 big-padded-left"
    >
      <QualityGatePermissions
        qualityGate={
          Object {
            "actions": Object {
              "delegate": true,
            },
            "id": "1",
            "name": "qualitygate",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`should render correctly: is default 1`] = `
<div
  className="layout-page-main-inner"
>
  <withMetricsContext(withAppStateContext(Conditions))
    canEdit={false}
    conditions={
      Array [
        Object {
          "error": "10",
          "id": 1,
          "metric": "coverage",
          "op": "LT",
        },
      ]
    }
    onAddCondition={[MockFunction]}
    onRemoveCondition={[MockFunction]}
    onSaveCondition={[MockFunction]}
    qualityGate={
      Object {
        "conditions": Array [
          Object {
            "error": "10",
            "id": 1,
            "metric": "coverage",
            "op": "LT",
          },
        ],
        "id": "1",
        "name": "qualitygate",
      }
    }
  />
  <div
    className="display-flex-row huge-spacer-top"
  >
    <div
      className="quality-gate-section width-50 big-padded-right"
      id="quality-gate-projects"
    >
      <header
        className="display-flex-center spacer-bottom"
      >
        <h3>
          quality_gates.projects
        </h3>
        <HelpTooltip
          className="spacer-left"
          overlay={
            <div
              className="big-padded-top big-padded-bottom"
            >
              quality_gates.projects.help
            </div>
          }
        />
      </header>
      quality_gates.projects_for_default
    </div>
  </div>
</div>
`;

exports[`should render correctly: is default, no conditions 1`] = `
<div
  className="layout-page-main-inner"
>
  <Alert
    className="big-spacer-bottom"
    variant="warning"
  >
    quality_gates.is_default_no_conditions
  </Alert>
  <withMetricsContext(withAppStateContext(Conditions))
    canEdit={false}
    conditions={Array []}
    onAddCondition={[MockFunction]}
    onRemoveCondition={[MockFunction]}
    onSaveCondition={[MockFunction]}
    qualityGate={
      Object {
        "conditions": Array [],
        "id": "1",
        "name": "qualitygate",
      }
    }
  />
  <div
    className="display-flex-row huge-spacer-top"
  >
    <div
      className="quality-gate-section width-50 big-padded-right"
      id="quality-gate-projects"
    >
      <header
        className="display-flex-center spacer-bottom"
      >
        <h3>
          quality_gates.projects
        </h3>
        <HelpTooltip
          className="spacer-left"
          overlay={
            <div
              className="big-padded-top big-padded-bottom"
            >
              quality_gates.projects.help
            </div>
          }
        />
      </header>
      quality_gates.projects_for_default
    </div>
  </div>
</div>
`;

exports[`should render correctly: is not default 1`] = `
<div
  className="layout-page-main-inner"
>
  <withMetricsContext(withAppStateContext(Conditions))
    canEdit={false}
    conditions={
      Array [
        Object {
          "error": "10",
          "id": 1,
          "metric": "coverage",
          "op": "LT",
        },
      ]
    }
    onAddCondition={[MockFunction]}
    onRemoveCondition={[MockFunction]}
    onSaveCondition={[MockFunction]}
    qualityGate={
      Object {
        "conditions": Array [
          Object {
            "error": "10",
            "id": 1,
            "metric": "coverage",
            "op": "LT",
          },
        ],
        "id": "1",
        "name": "qualitygate",
      }
    }
  />
  <div
    className="display-flex-row huge-spacer-top"
  >
    <div
      className="quality-gate-section width-50 big-padded-right"
      id="quality-gate-projects"
    >
      <header
        className="display-flex-center spacer-bottom"
      >
        <h3>
          quality_gates.projects
        </h3>
        <HelpTooltip
          className="spacer-left"
          overlay={
            <div
              className="big-padded-top big-padded-bottom"
            >
              quality_gates.projects.help
            </div>
          }
        />
      </header>
      <Projects
        key="1"
        qualityGate={
          Object {
            "conditions": Array [
              Object {
                "error": "10",
                "id": 1,
                "metric": "coverage",
                "op": "LT",
              },
            ],
            "id": "1",
            "name": "qualitygate",
          }
        }
      />
    </div>
  </div>
</div>
`;
